--- a/deploy/argocd-nodeport.yaml
+++ b/deploy/argocd-nodeport.yaml
@@ -13,6 +13,7 @@ spec:
     port: 80
     protocol: TCP
     targetPort: 8080
+    nodePort: 30080
   - name: https
     port: 443
     protocol: TCP
