--- a/deploy/kind-config.yaml
+++ b/deploy/kind-config.yaml
@@ -10,9 +10,21 @@ nodes:
       kubeletExtraArgs:
         node-labels: "ingress-ready=true"
   extraPortMappings:
-  - containerPort: 80
-    hostPort: 30080
+  - hostPort: 30000
+    containerPort: 30000
     protocol: TCP
-  - containerPort: 443
-    hostPort: 30443
+  - hostPort: 39090
+    containerPort: 39090
     protocol: TCP
+  - hostPort: 30080
+    containerPort: 30080
+    protocol: TCP
+  - hostPort: 30443
+    containerPort: 30443
+    protocol: TCP
+  - hostPort: 36686
+    containerPort: 36686
+    protocol: TCP  
+  - hostPort: 30200
+    containerPort: 30200
+    protocol: TCP         
