Adding ingress back

--- a/deploy/kind-config.yaml
+++ b/deploy/kind-config.yaml
@@ -10,6 +10,12 @@ nodes:
       kubeletExtraArgs:
         node-labels: "ingress-ready=true"
   extraPortMappings:
+  - hostPort: 80
+    containerPort: 80
+    protocol: TCP  
+  - hostPort: 443
+    containerPort: 443
+    protocol: TCP      
   - hostPort: 30100
     containerPort: 30100
     protocol: TCP
