--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -16,6 +16,8 @@
 
 	// forward ports for the app
 	"forwardPorts": [
+		80,
+		443,
 		30100,
 		30101,
 		30102,
@@ -25,6 +27,8 @@
 
 	// add labels
 	"portsAttributes": {
+		"80": { "label": "NginX Ingress HTTP" },
+		"443": { "label": "NginX Ingress HTTPS" },
 		"30100": { "label": "ArgoCD HTTP" },
 		"30101": { "label": "Grafana" },
 		"30102": { "label": "Prometheus" },
